# fuzzy-sets

./: README.md  pyproject.toml  setup.cfg
fuzzysets/: TrapezoidFuzzyNumber.py  __init__.py  cauchyfuzzyset.py  graphs.py  inference.py  surface.py  test.py  test_mandani.py  tfn.py  tnorm.py
games/: dinogame.py
initfuzzy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_mandani.py  test_tnorm.py
