[metadata]
name = initfuzzy
version = 0.0.3
author = Thiago Santos da Silva
author_email = tthiagosantos38@gmail.com
description = A package for interactive experiments with fuzzy sets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thigs0/initfuzzy
project_urls =
    Bug Tracker = https://github.com/StiliyanDr/fuzzy-sets/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = fuzzy, set, fuzzyset

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.6
install_requires =
    matplotlib
    numpy

[options.packages.find]
where = .
include = initfuzzy*
